<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0B0B0B"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="#292828"
            android:orientation="vertical"
            android:paddingBottom="6dp">

            <ImageView
                android:id="@+id/newsImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/book_icon_4x_4x" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/newsDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    tools:text="@string/news_date" />

                <TextView
                    android:id="@+id/newsTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    tools:text="@string/news_time" />

            </RelativeLayout>

            <TextView
                android:id="@+id/newsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="#EDE5E5"
                android:textSize="18sp"
                tools:text="@string/news_title" />


            <TextView
                android:id="@+id/sectionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                tools:text="@string/news_section" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
